--- a/src/css/taskbook.css
+++ b/src/css/taskbook.css
@@ -72,7 +72,10 @@ body {
   width: 50%;
 }
 
-.hint {
+.input-prompt {
   color: #cccccc;
   font-style: italic;
+  font-family: Arial;
+  margin: 0.3em 0 0 0.5em;
+  position: absolute;
 }
